css/style.css
/* ... */
  /* iphone Portrait and Landscape */
@media only screen and (min-device-width: 320px) and (max-device-width: 568px)and (-webkit-min-device-pixel-ratio: 2) {
div#navbar-ipad {
  display: block;
  }

  ul {
    -webkit-margin-before: .5em;
    -webkit-margin-after: .5em;
  }

  ul li#logo {
    display: none;
  }

  ul li#logo-ipad {
    display: block;
    font-size: 1.7em;
    letter-spacing: -1.4px; 
    margin-top: 3%;
  }

  .nav {
    font-size: 105%;
  }

  .slider {
    margin-top: 8%;
  }

  span#hide_for_mobile {
    display: none;
  }

  *::-webkit-media-controls-start-playback-button {
  display: none!important;
  -webkit-appearance: none;
  } 

  _::-webkit-:host:not(:root:root), .cost { margin-top: -20px; }

  section#about {
    width: 65%;
    font-size: 83%;
    margin-top: 3%;
  }

  div#description {
    font-size: 83%;
    margin-bottom: 1%;
  }

  section#about p {
     -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
  }

  section#current {
    margin-top: 8%;
  }

  #img0 {
  background-position: center top;
  height: 20em;
  }

  #img1 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img2 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img3 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img4 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img5 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img6 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img7 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img8 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img9 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img10 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img11 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img12 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img13 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img14 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img15 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img16 {
  background-position: 50% 25%;
  height: 20em;
  }

  #img17 {
  background-position: 50% 25%;
  height: 20em;
  }

}

